--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -1,4 +1,4 @@
-# Exploration and quality Control {#quality-control}
+# Exploration and Quality Control {#quality-control}
 
 
 ```{r setup, echo=FALSE, results="asis"}
