--- a/22_communitytyping.Rmd
+++ b/22_communitytyping.Rmd
@@ -1,4 +1,4 @@
-# Community typing {#community-typing}
+# Community Typing {#community-typing}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
