--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -1,4 +1,4 @@
-# Community typing (clustering) {#clustering}
+# Community Typing (Clustering) {#clustering}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
