--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -1,4 +1,4 @@
-# Differential abundance {#differential-abundance}
+# Differential Abundance {#differential-abundance}
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
 chapterPreamble()
@@ -7,44 +7,38 @@ chapterPreamble()
 
 ## Differential abundance analysis
 
+This section provides an introduction to Differential Abundance Analysis (DAA),
+which is used to identify differences in the abundances of individual taxa (at
+any taxonomic level) between two or more groups, such as treatment and control.
+Here, we demonstrate its implementation on peerj13075, one of the [mia datasets](#package-data).
 
-This section provides an overview and examples of *differential
-abundance analysis (DAA)* based on one of the [openly available
-datasets](https://microbiome.github.io/mia/reference/mia-datasets.html)
-in mia to illustrate how to perform differential abundance analysis
-(DAA). DAA identifies differences in the abundances of individual
-taxonomic groups between two or more groups (e.g. treatment vs
-control). This can be performed at any phylogenetic level.
-
-We perform DAA to identify biomarkers and/or gain understanding of a
-complex system by looking at its isolated components. For example,
-identifying that a bacterial taxon is different between a patient
-group with disease *X* vs a healthy control group might lead to
-important insights into the pathophysiology. Changes in the microbiota
-might be cause or a consequence of a disease. Either way, it can
-help to understand the system as a whole. Be aware that this approach
-has also been criticized recently [@Quinn2021].
+The goal of DAA is to identify biomarkers of a certain phenotype or condition,
+and gain understanding of a complex system by looking at its isolated components.
+For example, the identification of a bacterial taxon that is differentially
+abundant between healthy patients and diseased patients can lead to important
+insights into the pathophysiology of the disease. In other words, differentially
+abundant taxa can be involved in the dynamics of the disease, which in turn helps
+understand the system as a whole. Despite its relevance in current research,
+the DAA approach has also been subject to debate [@Quinn2021].
 
 
 ### Examples and tools
 
-Due to the complex data characteristics of microbiome sequencing data,
-differential abundance analysis of microbiome data faces many
-statistical challenges [@Yang2022], including:
+Due to the size and complexity of microbiome sequencing data, in this field
+DAA still faces several statistical challenges [@Yang2022]. These include:
   
-- Highly variable. The abundance of a specific taxon could range over
+- High variability. The abundance of a specific taxon could range over
   several orders of magnitude.
   
-- Zero-inflated. In a typical microbiome dataset, more than 70% of the
+- Zero-inflation. In a typical microbiome dataset, more than 70% of the
   values are zeros. Zeros could be due to either physical absence
   (structural zeros) or insufficient sampling effort (sampling zeros).
   
-- Compositional. Increase or decrease in the (absolute) abundance of
+- Compositionality. Increase or decrease in the (absolute) abundance of
   one taxon at the sampling site will lead to apparent changes in the
   relative abundances of other taxa in the sample.
 
-As summarized in @Yang2022, to address the above statistical
-chanllenegs:
+As a consequence, the following approaches have been developed:
 
 - Over-dispersed count models has been proposed to address zero
   inflation, such as the negative binomial model used by edgeR
