--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -1,4 +1,4 @@
-# Community diversity {#community-diversity}
+# Community Diversity {#community-diversity}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
