--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -1,4 +1,4 @@
-# Community composition {#microbiome-community}
+# Community Composition {#microbiome-community}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
