Reorganise chapter on beta diversity

--- a/97_extra_materials.Rmd
+++ b/97_extra_materials.Rmd
@@ -8,7 +8,7 @@ chapterPreamble()
 ```
 
 
-## PERMANOVA comparison
+## PERMANOVA comparison {#compare-permanova}
 
 Here we present two possible uses of the `adonis2` function which performs PERMANOVA. The
 optional argument `by` has an effect on the statistical outcome, so its two options are
