--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -164,7 +164,16 @@ assay(altExp(tse, "Family"), "counts")[1:5,1:7]
 ```
 
 `altExpNames` now consists of `Family` level data. This can be extended to use 
-any taxonomic level listed in `mia::taxonomyRanks(tse)`.   
+any taxonomic level listed in `mia::taxonomyRanks(tse)`.
+
+Rare taxa can also be aggregated into a single group "Other" instead of filtering them out. A suitable function for this is `agglomerateByPrevance`.
+
+```{r}
+altExp(tse, "Family_prevalence") <- agglomerateByPrevalence(tse, rank = "Family", other_label = "Other")
+altExp(tse, "Family_prevalence")
+
+assay(altExp(tse, "Family_prevalence"), "relabundance")[200:208, 1:7]
+```
 
 
 ## Data transformation
