--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -71,17 +71,17 @@ mae[[1]] <- mae[[1]][!is.na(rowData(mae[[1]])$Phylum), ]
 rowData(mae[[1]]) <- DataFrame(apply(rowData(mae[[1]]), 2, 
                                      str_remove, pattern = "._[0-9]__"))
 # Microbiome data
-mae[[1]]
+getWithColData(mae, 1)
 ```
 
 ```{r cross-correlation3}
 # Metabolite data
-mae[[2]]
+getWithColData(mae, 2)
 ```
 
 ```{r cross-correlation4}
 # Biomarker data
-mae[[3]]
+getWithColData(mae, 3)
 ```
 
 ## Cross-correlation Analysis {#cross-correlation}
