--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -131,6 +131,8 @@ Next, we will plot the dendrogram, which is possible since we got the
 additional information from the clustering.
 
 ```{r hclust3}
+library(dendextend)
+
 # Get hclust data from metadata
 hclust_data <- metadata(tse)$clusters$hclust
 
@@ -478,7 +480,6 @@ _cobiclust_ which is designed for microbial data.
 
 Load example data
 ```{r load-pkg-data2}
-library(mia)
 library(cobiclust)
 data("HintikkaXOData")
 mae <- HintikkaXOData
@@ -488,10 +489,11 @@ Only the most prevalent taxa are included in analysis.
 
 ```{r cobiclust_1}
 # Subset data in the first experiment
-mae[[1]] <- subsetByPrevalentTaxa(mae[[1]], rank = "Genus", prevalence = 0.2, detection = 0.001)
-# clr-transform in the first experiment
-mae[[1]] <- transformCounts(mae[[1]], method = "relabundance")
-mae[[1]] <- transformCounts(mae[[1]], "relabundance", method = "rclr")
+mae[[1]] <- subsetByPrevalentTaxa(mae[[1]], rank = "Genus", prevalence = 0.2, 
+                                  detection = 0.001)
+
+# rclr-transform in the first experiment
+mae[[1]] <- transformCounts(mae[[1]], "counts", method = "rclr")
 ```
 
 _cobiclust_ takes counts table as an input and gives _cobiclust_ object as an output.
@@ -510,7 +512,8 @@ rowData(mae[[1]])$clusters <- factor(row_clusters)
 colData(mae[[1]])$clusters <- factor(col_clusters)
 
 # Order data based on clusters
-mae[[1]] <- mae[[1]][order(rowData(mae[[1]])$clusters), order(colData(mae[[1]])$clusters)]
+mae[[1]] <- mae[[1]][order(rowData(mae[[1]])$clusters),
+                     order(colData(mae[[1]])$clusters)]
 
 # Print clusters
 clusters$classification
@@ -522,7 +525,7 @@ Next we can plot clusters. Annotated heatmap is a common choice.
 library(pheatmap)
 # z-transform for heatmap
 mae[[1]] <- transformCounts(mae[[1]], assay.type = "rclr",
-                            MARGIN = "features", method = "z", name = "clr_z")
+                            MARGIN = "features", method = "z", name = "rclr_z")
 
 # Create annotations. When column names are equal, they should share levels.
 # Here samples include 3 clusters, and taxa 2. That is why we have to make
@@ -537,7 +540,7 @@ colnames(annotation_row) <- "row_clusters"
 Plot the heatmap.
 
 ```{r cobiclust_3b, fig.width=14, fig.height=12}
-pheatmap(assay(mae[[1]], "clr_z"), cluster_rows = F, cluster_cols = F,
+pheatmap(assay(mae[[1]], "rclr_z"), cluster_rows = F, cluster_cols = F,
          annotation_col = annotation_col, annotation_row = annotation_row)
 ```
 
@@ -567,7 +570,7 @@ p1 + p2
 
 Here, we analyze cross-correlation between taxa and metabolites. This
 is a case, where we use _biclust_ method which is suitable for numeric
-matrices in general.
+matrices in general. First we pre-process the data.
 
 ```{r biclust_1}
 # Samples must be in equal order
@@ -577,26 +580,38 @@ mae[[1]] <- mae[[1]][, colnames(mae[[2]])]
 # Make rownames unique since it is required by other steps
 rownames(mae[[1]]) <- make.unique(rownames(mae[[1]]))
 
+# Transform the metabolites to be in log basis
+mae[[2]] <- transformCounts(mae[[2]], assay.type = "nmr", method = "log10")
+
+# Add missing data to the metabolites
+replace_na <- function(row) {
+    na_indices <- which(is.na(row))
+    non_na_values <- row[!is.na(row)]
+    row[na_indices] <- sample(non_na_values, length(na_indices), replace = TRUE)
+    row
+}
+assay(mae[[2]], "log10") <- t(apply(assay(mae[[2]], "log10"), 1, replace_na))
+```
+
+Next, we compute the spearman correlation matrix.
+
+```{r biclust_2}
 # Calculate correlations
 corr <- getExperimentCrossCorrelation(mae, 1, 2, assay.type1 = "rclr",
-                                      assay.type2 = "nmr", mode = "matrix",
-                                      cor_threshold = 0.2)
+                                      assay.type2 = "log10", mode = "matrix",
+                                      correlation = "spearman")
 ```
 
 
-_biclust_ takes matrix as an input and returns _biclust_ object. 
+_biclust_ takes a matrix as an input and returns a _biclust_ object. 
 
-```{r biclust_2}
+```{r biclust_3}
+library(biclust)
 # Set seed for reproducibility
 set.seed(3973)
 
 # Find biclusters
-library(biclust)
-bc <- biclust(corr,
-  method = BCPlaid(), fit.model = y ~ m,
-  background = TRUE, shuffle = 100, back.fit = 0, max.layers = 10,
-  iter.startup = 10, iter.layer = 100, verbose = FALSE
-)
+bc <- biclust(corr, method = BCPlaid(), verbose = FALSE)
 
 bc
 ```
@@ -609,59 +624,61 @@ Meaning that if one cluster size of 5 features was found out of 20 features,
 those 15 features do not belong to any cluster. That is why we have to create an
 additional cluster for features/samples that are not assigned into any cluster.
 
-```{r biclust_3}
+```{r biclust_4}
 # Functions for obtaining biclust information
 
 # Get clusters for rows and columns
 .get_biclusters_from_biclust <- function(bc, assay) {
-  # Get cluster information for columns and rows
-  bc_columns <- t(bc@NumberxCol)
-  bc_columns <- data.frame(bc_columns)
-  bc_rows <- bc@RowxNumber
-  bc_rows <- data.frame(bc_rows)
+    # Get cluster information for columns and rows
+    bc_columns <- t(bc@NumberxCol)
+    bc_columns <- data.frame(bc_columns)
+    bc_rows <- bc@RowxNumber
+    bc_rows <- data.frame(bc_rows)
 
-  # Get data into right format
-  bc_columns <- .manipulate_bc_data(bc_columns, assay, "col")
-  bc_rows <- .manipulate_bc_data(bc_rows, assay, "row")
-
-  return(list(bc_columns = bc_columns, bc_rows = bc_rows))
+    # Get data into right format
+    bc_columns <- .manipulate_bc_data(bc_columns, assay, "col")
+    bc_rows <- .manipulate_bc_data(bc_rows, assay, "row")
+    
+    return(list(bc_columns = bc_columns, bc_rows = bc_rows))
 }
 
 # Input clusters, and how many observations there should be, i.e.,
 # the number of samples or features
 .manipulate_bc_data <- function(bc_clusters, assay, row_col) {
-  # Get right dimension
-  dim <- ifelse(row_col == "col", ncol(assay), nrow(assay))
-  # Get column/row names
-  if (row_col == "col") {
-    names <- colnames(assay)
-  } else {
-    names <- rownames(assay)
-  }
-
-  # If no clusters were found, create one. Otherwise create additional
-  # cluster which
-  # contain those samples that are not included in clusters that were found.
-  if (nrow(bc_clusters) != dim) {
-    bc_clusters <- data.frame(cluster = rep(TRUE, dim))
-  } else {
-    # Create additional cluster that includes those samples/features that
-    # are not included in other clusters.
-    vec <- ifelse(rowSums(bc_clusters) > 0, FALSE, TRUE)
-    # If additional cluster contains samples, then add it
-    if (any(vec)) {
-      bc_clusters <- cbind(bc_clusters, vec)
+    # Get right dimension
+    dim <- ifelse(row_col == "col", ncol(assay), nrow(assay))
+    # Get column/row names
+    if (row_col == "col") {
+        names <- colnames(assay)
+    } else {
+        names <- rownames(assay)
     }
-  }
-  # Adjust row and column names
-  rownames(bc_clusters) <- names
-  colnames(bc_clusters) <- paste0("cluster_", 1:ncol(bc_clusters))
-  return(bc_clusters)
+
+    # If no clusters were found, create one. Otherwise create additional
+    # cluster which
+    # contain those samples that are not included in clusters that were found.
+    if (nrow(bc_clusters) != dim) {
+        bc_clusters <- data.frame(cluster = rep(TRUE, dim))
+    } else {
+        # Create additional cluster that includes those samples/features that
+        # are not included in other clusters.
+        vec <- ifelse(rowSums(bc_clusters) > 0, FALSE, TRUE)
+
+        # If additional cluster contains samples, then add it
+        if (any(vec)) {
+            bc_clusters <- cbind(bc_clusters, vec)
+        }
+    }
+    
+    # Adjust row and column names
+    rownames(bc_clusters) <- names
+    colnames(bc_clusters) <- paste0("cluster_", 1:ncol(bc_clusters))
+    return(bc_clusters)
 }
 ```
 
 
-```{r biclust_4}
+```{r biclust_5}
 # Get biclusters
 bcs <- .get_biclusters_from_biclust(bc, corr)
 
@@ -674,42 +691,39 @@ head(bicluster_rows)
 
 Let's collect information for the scatter plot. 
 
-```{r biclust_5}
+```{r biclust_6}
 # Function for obtaining sample-wise sum, mean, median, and mean variance
 # for each cluster
 
 .sum_mean_median_var <- function(tse1, tse2, assay.type1, assay.type2, clusters1, clusters2) {
-  list <- list()
-  # Create a data frame that includes all the information
-  for (i in 1:ncol(clusters1)) {
-    # Subset data based on cluster
-    tse_subset1 <- tse1[clusters1[, i], ]
-    tse_subset2 <- tse2[clusters2[, i], ]
-    # Get assay
-    assay1 <- assay(tse_subset1, assay.type1)
-    assay2 <- assay(tse_subset2, assay.type2)
-    # Calculate sum, mean, median, and mean variance
-    sum1 <- colSums2(assay1, na.rm = T)
-    mean1 <- colMeans2(assay1, na.rm = T)
-    median1 <- colMedians(assay1, na.rm = T)
-    var1 <- colVars(assay1, na.rm = T)
-
-    sum2 <- colSums2(assay2, na.rm = T)
-    mean2 <- colMeans2(assay2, na.rm = T)
-    median2 <- colMedians(assay2, na.rm = T)
-    var2 <- colVars(assay2, na.rm = T)
-
-    list[[i]] <- data.frame(
-      sample = colnames(tse1), sum1, sum2, mean1, mean2,
-      median1, median2, var1, var2
-    )
-  }
-
-  return(list)
+    list <- list()
+    # Create a data frame that includes all the information
+    for (i in 1:ncol(clusters1)) {
+        # Subset data based on cluster
+        tse_subset1 <- tse1[clusters1[, i], ]
+        tse_subset2 <- tse2[clusters2[, i], ]
+        # Get assay
+        assay1 <- assay(tse_subset1, assay.type1)
+        assay2 <- assay(tse_subset2, assay.type2)
+        # Calculate sum, mean, median, and mean variance
+        sum1 <- colSums2(assay1, na.rm = T)
+        mean1 <- colMeans2(assay1, na.rm = T)
+        median1 <- colMedians(assay1, na.rm = T)
+        var1 <- colVars(assay1, na.rm = T)
+        
+        sum2 <- colSums2(assay2, na.rm = T)
+        mean2 <- colMeans2(assay2, na.rm = T)
+        median2 <- colMedians(assay2, na.rm = T)
+        var2 <- colVars(assay2, na.rm = T)
+        
+        list[[i]] <- data.frame(sample = colnames(tse1), sum1, sum2, mean1, 
+                                 mean2, median1, median2, var1, var2)
+    }
+    return(list)
 }
 
 # Calculate info
-df <- .sum_mean_median_var(mae[[1]], mae[[2]], "rclr", "nmr", bicluster_rows, bicluster_columns)
+df <- .sum_mean_median_var(mae[[1]], mae[[2]], "rclr", "log10", bicluster_rows, bicluster_columns)
 ```
 
 Now we can create a scatter plot. X-axis includes median clr abundance
@@ -721,49 +735,43 @@ both cluster 1 and 3.  This means that when abundance of bacteria
 belonging to cluster 1 or 3 is higher, the concentration of
 metabolites of cluster 1 or 3 is lower, and vice versa.
 
-```{r biclust_6, fig.width=14, fig.height=6, fig.show="keep", out.width="33%"}
+```{r biclust_7, fig.width=14, fig.height=6, fig.show="keep", out.width="33%"}
 pics <- list()
 for (i in seq_along(df)) {
-  pics[[i]] <- ggplot(df[[i]]) +
-    geom_point(aes(x = median1, y = median2)) +
-    labs(
-      title = paste0("Cluster ", i),
-      x = "Taxa (rclr median)",
-      y = "Metabolites (abs. median)"
-    )
-  print(pics[[i]])
+    pics[[i]] <- ggplot(df[[i]]) +
+        geom_point(aes(x = median1, y = median2)) +
+        labs(title = paste0("Cluster ", i), x = "Taxa (rclr median)",
+             y = "Metabolites (abs. median)")
+    print(pics[[i]])
 }
-# pics[[1]] + pics[[2]] + pics[[3]]
+pics[[1]] + pics[[2]] + pics[[3]]
 ```
 
 _pheatmap_ does not allow boolean values, so they must be converted into factors.
 
-```{r biclust_7}
+```{r biclust_8}
 bicluster_columns <- data.frame(apply(bicluster_columns, 2, as.factor))
 bicluster_rows <- data.frame(apply(bicluster_rows, 2, as.factor))
 ```
 
 Again, we can plot clusters with heatmap.
 
-```{r biclust_8, fig.width=10, fig.height=10}
+```{r biclust_9, fig.width=10, fig.height=10}
 # Adjust colors for all clusters
 if (ncol(bicluster_rows) > ncol(bicluster_columns)) {
-  cluster_names <- colnames(bicluster_rows)
+    cluster_names <- colnames(bicluster_rows)
 } else {
-  cluster_names <- colnames(bicluster_columns)
+    cluster_names <- colnames(bicluster_columns)
 }
 annotation_colors <- list()
 for (name in cluster_names) {
-  annotation_colors[[name]] <- c("TRUE" = "red", "FALSE" = "white")
+    annotation_colors[[name]] <- c("TRUE" = "red", "FALSE" = "white")
 }
 
 # Create a heatmap
-pheatmap(corr,
-  cluster_cols = F, cluster_rows = F,
-  annotation_col = bicluster_columns,
-  annotation_row = bicluster_rows,
-  annotation_colors = annotation_colors
-)
+pheatmap(corr, cluster_cols = F, cluster_rows = F,
+         annotation_col = bicluster_columns, annotation_row = bicluster_rows,
+         annotation_colors = annotation_colors)
 ```
 
 ### Taxa vs taxa
@@ -771,24 +779,20 @@ pheatmap(corr,
 Third and final example deals with situation where we want to analyze
 correlation between taxa. _biclust_ is suitable for this.
 
-```{r biclust_9}
+```{r biclust_10}
 # Calculate cross-correlation
-corr <- getExperimentCrossCorrelation(mae, 1, 1,
-  assay.type1 = "rclr", assay.type2 = "rclr",
-  mode = "matrix",
-  cor_threshold = 0.2, verbose = F, show_warning = F
-)
+corr <- getExperimentCrossCorrelation(mae, 1, 1, assay.type1 = "rclr",
+                                      assay.type2 = "rclr", mode = "matrix",
+                                      cor_threshold = 0.2, verbose = F, 
+                                      show_warning = F)
 
 # Find biclusters
-library(biclust)
-bc <- biclust(corr,
-  method = BCPlaid(), fit.model = y ~ m,
-  background = TRUE, shuffle = 100, back.fit = 0, max.layers = 10,
-  iter.startup = 10, iter.layer = 100, verbose = FALSE
-)
+bc <- biclust(corr, method = BCPlaid(), fit.model = y ~ m, background = TRUE, 
+              shuffle = 100, back.fit = 0, max.layers = 10,iter.startup = 10, 
+              iter.layer = 100, verbose = FALSE)
 ```
 
-```{r biclust_10}
+```{r biclust_11}
 # Get biclusters
 bcs <- .get_biclusters_from_biclust(bc, corr)
 
@@ -797,36 +801,30 @@ bicluster_columns <- bcs$bc_columns
 ```
 
 
-```{r biclust_11}
+```{r biclust_12}
 # Create a column that combines information
-# If row/column includes in multiple clusters, cluster numbers are separated with "_&_"
-bicluster_columns$clusters <- apply(
-  bicluster_columns, 1,
-  function(x) {
-    paste(paste(which(x)), collapse = "_&_")
-  }
+# If row/column includes in multiple clusters, 
+# cluster numbers are separated with "_&_"
+bicluster_columns$clusters <- apply(bicluster_columns, 1, function(x) {
+        paste(paste(which(x)), collapse = "_&_")
+    }
 )
 bicluster_columns <- bicluster_columns[, "clusters", drop = FALSE]
 
-bicluster_rows$clusters <- apply(
-  bicluster_rows, 1,
-  function(x) {
-    paste(paste(which(x)), collapse = "_&_")
-  }
+bicluster_rows$clusters <- apply(bicluster_rows, 1, function(x) {
+        paste(paste(which(x)), collapse = "_&_")
+    }
 )
 bicluster_rows <- bicluster_rows[, "clusters", drop = FALSE]
 ```
 
-```{r biclust_12, fig.width=14, fig.height=12}
+```{r biclust_13, fig.width=14, fig.height=12}
 # Convert boolean values into factor
 bicluster_columns <- data.frame(apply(bicluster_columns, 2, as.factor))
 bicluster_rows <- data.frame(apply(bicluster_rows, 2, as.factor))
 
-pheatmap(corr,
-  cluster_cols = F, cluster_rows = F,
-  annotation_col = bicluster_columns,
-  annotation_row = bicluster_rows
-)
+pheatmap(corr, cluster_cols = F, cluster_rows = F,
+         annotation_col = bicluster_columns, annotation_row = bicluster_rows)
 ```
 
 ## Additional Community Typing
