Add section on network learning

--- a/book.bib
+++ b/book.bib
@@ -1397,3 +1397,49 @@ https://github.com/thomasp85/patchwork},
 }
 
 
+
+@article{yoon2019microbial,
+  title={Microbial networks in SPRING-Semi-parametric rank-based correlation and partial correlation estimation for quantitative microbiome data},
+  author={Yoon, Grace and Gaynanova, Irina and M{\"u}ller, Christian L},
+  journal={Frontiers in genetics},
+  volume={10},
+  pages={516},
+  year={2019},
+  publisher={Frontiers Media SA}
+}
+
+
+@article{peschel2021netcomi,
+    author = {Peschel, Stefanie and M{\"{u}}ller, Christian L and von Mutius, Erika and Boulesteix, Anne-Laure and Depner, Martin},
+    title = "{NetCoMi: network construction and comparison for microbiome data in R}",
+    journal = {Briefings in Bioinformatics},
+    volume = {22},
+    number = {4},
+    pages = {bbaa290},
+    year = {2021},
+    doi = {10.1093/bib/bbaa290},
+    url = {https://doi.org/10.1093/bib/bbaa290}
+}
+
+
+@article{potbhare2022skin,
+  title={Skin microbiota diversity among genetically unrelated individuals of Indian origin},
+  author={Potbhare, Renuka and RaviKumar, Ameeta and Munukka, Eveliina and Lahti, Leo and Ashma, Richa},
+  journal={PeerJ},
+  volume={10},
+  pages={e13075},
+  year={2022},
+  publisher={PeerJ Inc.}
+}
+
+
+@article{ullmann2023over,
+  title={Over-optimism in unsupervised microbiome analysis: Insights from network learning and clustering},
+  author={Ullmann, Theresa and Peschel, Stefanie and Finger, Philipp and M{\"u}ller, Christian L and Boulesteix, Anne-Laure},
+  journal={PLoS Computational Biology},
+  volume={19},
+  number={1},
+  pages={e1010820},
+  year={2023},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
