--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -169,6 +169,12 @@ assay(altExp(tse, "Family"), "counts")[1:5,1:7]
 `altExpNames` now consists of `Family` level data. This can be extended to use 
 any taxonomic level listed in `mia::taxonomyRanks(tse)`.
 
+```{r}
+# Saving the tse for later
+tseGlobalPatterns <- tse
+```
+
+
 ### Taxa clustering {#taxa-clustering}
 Another way to agglomerate the data is to cluster on the taxa. To do so,
 we usually start by doing a compositionality aware transformation such as CLR, 
@@ -270,6 +276,7 @@ For a complete list of available transformations and parameters, see function
 [help](https://microbiome.github.io/mia/reference/transformCounts.html).
 
 ```{r}
+tse <- tseGlobalPatterns
 tse <- transformCounts(tse, assay.type = "counts", method = "relabundance", pseudocount = 1)
 tse <- transformCounts(x = tse, assay.type = "relabundance", method = "clr", 
                         pseudocount = 1, name = "clr_transformation")
