Fixed dendrogram plot

--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -140,8 +140,8 @@ hclust_data <- metadata(tse)$clusters$hclust
 dendro <- as.dendrogram(hclust_data)
 
 # Plot dendrogram
-labels(dendro) <- NULL
-plot(dendro)
+
+dendro %>% set("labels", NULL) %>% plot()
 ```
 
 In our case, we cut the dendrogram in half by default. To know how many clusters
