Add links to microbiome/data repo

--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -429,12 +429,15 @@ tse
 
 
 
-### Import from external files
+### Import from external files {#import-from-file}
 
 Microbiome (taxonomic) profiling data is commonly distributed in
 various file formats. You can import such external data files as a
 (Tree)SummarizedExperiment object, but the details depend on the file
-format. Here, we provide examples for common formats. 
+format. Here, we provide examples for common formats. Some datasets and raw
+files to learn how to import raw data and construct TreeSE/MAE containers are
+available in the
+[microbiome data repository](https://github.com/microbiome/data).
 
 
 #### CSV import
