--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -185,10 +185,17 @@ Usefuls functions: DataFrame, TreeSummarizedExperiment, matrix, rownames, colnam
 
 ### Importing data
 
-You can also check the [function reference in the mia package](https://microbiome.github.io/mia/reference/index.html)
+Raw data of different types can be imported as a TreeSE with a number of
+functions explained in chapter \@ref(#import-from-file). You can also check the
+[function reference in the mia package](https://microbiome.github.io/mia/reference/index.html).
 
-1. Import data from another format (functions: loadFromMetaphlan | loadFromMothur | loadFromQIIME2 | makeTreeSummarizedExperimentFromBiom | makeTreeSummarizedExperimentFromDADA2 ...)
-2. Try out conversions between TreeSE and phyloseq data containers (makeTreeSummarizedExperimentFromPhyloseq; makephyloseqFromTreeSummarizedExperiment)
+1. Get familiar with the
+   [microbiome data repository](https://github.com/microbiome/data)
+   and read the instructions in its
+   [README](https://github.com/microbiome/data#training-microbiome-datasets)
+   to import and construct datasets from there.
+2. Import data from another format (functions: loadFromMetaphlan | loadFromMothur | loadFromQIIME2 | makeTreeSummarizedExperimentFromBiom | makeTreeSummarizedExperimentFromDADA2 ...)
+3. Try out conversions between TreeSE and phyloseq data containers (makeTreeSummarizedExperimentFromPhyloseq; makephyloseqFromTreeSummarizedExperiment)
 
 ### Preliminary exploration
 
