--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -606,8 +606,8 @@ Specific import functions are provided for:
 
 #### Biom import
 
-This example shows how Biom files are imported into a
-`TreeSummarizedExperiment` object.
+This example shows how [Biom files](https://biom-format.org/) are imported into
+a `TreeSummarizedExperiment` object.
 
 The data is from following publication: 
 Tengeler AC _et al._ (2020) [**Gut microbiota from persons with
