--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -60,7 +60,6 @@ you can find help for importing data into an SE object.
 # Load the data
 data(HintikkaXOData, package = "mia")
 mae <- HintikkaXOData
-mae
 ```
 
 ```{r cross-correlation2}
@@ -70,18 +69,26 @@ mae[[1]] <- mae[[1]][!is.na(rowData(mae[[1]])$Phylum), ]
 # Clean taxonomy data, so that names do not include additional characters
 rowData(mae[[1]]) <- DataFrame(apply(rowData(mae[[1]]), 2, 
                                      str_remove, pattern = "._[0-9]__"))
+```
+
+```{r}
+# Available alternative experiments
+experiments(mae)
+```
+
+```{r}
 # Microbiome data
-getWithColData(mae, 1)
+getWithColData(mae, "microbiota")
 ```
 
 ```{r cross-correlation3}
 # Metabolite data
-getWithColData(mae, 2)
+getWithColData(mae, "metabolites")
 ```
 
 ```{r cross-correlation4}
 # Biomarker data
-getWithColData(mae, 3)
+getWithColData(mae, "biomarkers")
 ```
 
 ## Cross-correlation Analysis {#cross-correlation}
