--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -166,13 +166,13 @@ assay(altExp(tse, "Family"), "counts")[1:5,1:7]
 `altExpNames` now consists of `Family` level data. This can be extended to use 
 any taxonomic level listed in `mia::taxonomyRanks(tse)`.
 
-Rare taxa can also be aggregated into a single group "Other" instead of filtering them out. A suitable function for this is `agglomerateByPrevance`.
+Rare taxa can also be aggregated into a single group "Other" instead of filtering them out. A suitable function for this is `agglomerateByPrevance`. The number of rare taxa is higher on the species level, which causes the need for data agglomeration by prevalence.
 
 ```{r}
-altExp(tse, "Family_prevalence") <- agglomerateByPrevalence(tse, rank = "Family", other_label = "Other")
-altExp(tse, "Family_prevalence")
+altExp(tse, "Species_byPrevalence") <- agglomerateByPrevalence(tse, rank = "Species", other_label = "Other", prevalence = 5/100, detection = 1/100, as_relative = T)
+altExp(tse, "Species_byPrevalence")
 
-assay(altExp(tse, "Family_prevalence"), "relabundance")[200:208, 1:7]
+assay(altExp(tse, "Species_byPrevalence"), "relabundance")[88:92, 1:7]
 ```
 
 
