--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -412,6 +412,8 @@ tse_Genus <- agglomerateByRank(tse, rank="Genus")
 tse_Genus <- transformCounts(tse, method = "relabundance", assay.type="counts")
 # Add info on dominant genus per sample
 tse_Genus <- addPerSampleDominantTaxa(tse_Genus, assay.type="relabundance", name = "dominant_taxa")
+# Overview on the dominant taxa per sample
+countDominantTaxa(tse_Genus, rank = "Genus")
 ```
 
 
@@ -428,7 +430,7 @@ Getting top taxa and visualizing the abundance on PCoA.
 # Getting the top taxa
 top_taxa <- getTopTaxa(tse_Genus,top = 6, assay.type = "relabundance")
 
-# Naming all the rest of non top-taxa as "Other"
+# Naming all the rest of non top-taxa as "Other" representing the dominant taxa that are not included in the most abundant taxa in the data
 most_abundant <- lapply(colData(tse_Genus)$dominant_taxa,
                    function(x){if (x %in% top_taxa) {x} else {"Other"}})
 
