--- a/90_acknowledgments.Rmd
+++ b/90_acknowledgments.Rmd
@@ -1,5 +1,4 @@
-
-# Contributors {-}
+# Authors and contributors {-}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -7,45 +6,63 @@ chapterPreamble()
 ```
 
 
-### *Chandler Ross, PhD* {-}
+### *Leo Lahti, DSc* {-}
 
-Chandler Ross is a PhD researcher at Turku Data science group research team.His research interest is mainly into Eco-Evolutionary Dynamics, Statistical Modelling and Time Series.
+Leo Lahti is professor in Data Science at the [Department of Computing, University of Turku, Finland](https://datascience.utu.fi/), with a focus on computational microbiome analysis. Lahti obtained doctoral degree (DSc) from Aalto University in Finland (2010), developing probabilistic machine learning and data integration methods for high-throughput life science data. Since 2011 he has carried out microbiome research and developed, among other things, the _phyloseq_-based [microbiome R package](https://bioconductor.org/packages/release/bioc/html/microbiome.html) before starting to develop the mia libraries and _TreeSummarizedExperiment_ / _MultiAssayExperiment_ framework for microbiome data science introduced in this gitbook. In addition to carrying out computational microbiome research, Lahti is in the editorial board of _ISME_ and _Microbiome_ journals, work group leader in the European COST action network [ML4microbiome](https://ml4microbiome.eu/), national delegate in the International Science Council Committee on Data ([CODATA](https://codata.org/)), and has led the development of [national policy on open access to research methods in Finland](https://avointiede.fi/en/policies-materials/policies-open-science-and-research-finland/policy-open-research-data-and-methods). He is current member in the [Bioconductor Community Advisory Board](https://bioconductor.org/about/community-advisory-board/) and runs regular training workshops in microbiome data science.
 
-### *Chouaib Benchraka, Msc* {-}
 
-Chouaib Benchraka is a research assistant at Turku data science research group.He is interested working with Machine Learning and Data Science researches.
+### *Tuomas Borman* {-}
+
+Tuomas Borman is a PhD researcher at the Department of Computing, University of Turku, and one of the key developers of the microbiome data science framework presented in this gitbook. He has helped to set up the base ecosystem of R/Bioconductor packages and other online resources.
+
+
+### *Giulio Benedetti* {-}
+
+Giulio Benedetti is a scientific programmer at the Department of Computing, University of Turku. His research interest is mostly related to Data Science. He has also helped to expand the SummarizedExperiment-based microbiome analysis framework to the Julia language, implementing [MicrobiomeAnalysis.jl](https://github.com/JuliaTurkuDataScience/MicrobiomeAnalysis.jl).
+
 
 ### *Felix Ernst, PhD* {-}
 
-Felic Ernst is among the developers who participated in the development of [miaverse](https://microbiome.github.io) which is open source project developing R/Bioc methods, benchmarking data, and educational material for microbiome research based on the SummarizedExperiment class and its derivatives.
+Felix Ernst is among the first developers of R/Bioc methods for microbiome research based on the _SummarizedExperiment_ class and its derivatives.
 
-### *Giulio Benedetti, Research Assistant* {-}
 
-Guilio Benedetti is a research assistant at Turku data science research group. His research  interest  is mostly related to  Data Science.
 
-### *Henrik Eckermann, PhD* {-}
+### Contributors {-}
 
-Henerik Eckermann is PhD researcher at the research group Turku data science. His research interest is in Human microbiome bioinformatics.
+This work is a remarkably collaborative effort over the years. The
+full list of contributors is available via
+[Github](https://github.com/microbiome/OMA/graphs/contributors). Some
+of the key contributors include:
 
-### *Leo Lahti, Professor* {-}
+- *Sudarshan Shetty, PhD* has supported the establishment of the
+   framework and associated tools. He also maintains a list of
+   [microbiome R
+   packages](https://microsud.github.io/Tools-Microbiome-Analysis/).
 
-Leo Lahti is the group leader for the research team at Turku data science and professor in Data Science in University of Turku, Finland. His research team focuses on computational analysis and modeling of complex natural and social systems. Lahti obtained doctoral degree (DSc) in statistical machine learning and bioinformatics from Aalto University in Finland (2010), developing probabilistic data integration methods for high-throughput life science data.
+- *Henrik Eckermann*, in particular to the development of
+   the differential abundance analyses
 
-### *Shigdel Rajesh, PhD* {-}
+- *Chouaib Benchraka* provided various contributions to the package ecosystem and the OMA book
 
-Shigdel Rajesh was a visiting scholar to Turku data science group.His research interest is mainly related to bioinformatics, microbiome data analysis. 
+- *Yağmur Şimşek* converted the miaSim R package to support the Bioconductor framework
 
-### *Sudarshan Shetty, PhD* {-}
+- *Basil Courbayre* provided various contributions to the package
+   ecosystem and the OMA book, in particular on unsupervised machine
+   learning
 
-Sudarshan Shetty is one of the key developers in the [miaverse](https://microbiome.github.io) R/Bioconductor package for microbiome bioinformatics based on (Tree)SummerizedExperiment. 
+- *Matti Ruuskanen, PhD*, added machine learning techniques for
+   microbiome analysis
 
-### *Tuomas Borman, PhD* {-}
+- *Shigdel Rajesh, PhD* 
 
-Tuomas Borman is a PhD researcher and one of the key developers of [miaverse](https://microbiome.github.io). He participated in setting up the base ecosystem of data containers, packages, and tutorials with other team members.
+- *Artur Sannikov* 
 
-### *Yağmur Şimşek, *{-}
+- *Jeba Akewak* 
 
-Yağmur Şimşek was a research assistant at the Turku data science reseach group when she contributed to this work.
+- *Himmi Lindgren*
+
+- *Lu Yang* 
+
 
 
 ### Acknowledgments {-}
@@ -55,58 +72,70 @@ contributions and interactions with other researchers, developers, and
 users. We express our gratitude to the entire Bioconductor community
 for developing this high-quality open research software repository for
 life science analytics, continuously pushing the limits in emerging
-fields [@Gentleman2004, @Huber2015]. The developers and contributors
-of this online tutorial are listed in Chapter \@ref(contributors).
+fields [@Gentleman2004], [@Huber2015].
 
-The base ecosystem of data containers, packages, and tutorials was set
-up as a collaborative effort by Tuomas Borman, Henrik Eckermann,
-Chouaib Benchraka, Chandler Ross, Shigdel Rajesh, Yağmur Şimşek,
-Giulio Benedetti, Sudarshan Shetty, Felix Ernst, and [Leo
-Lahti](http://www.iki.fi/Leo.Lahti).
-
-The work has been supported by the COST Action network on Statistical
-and Machine Learning Techniques for Human Microbiome Studies
-([ML4microbiome](https://www.ml4microbiome.eu/)) [@MorenoIndias2021].
-
-The framework is based on the _TreeSummarizedExperiment_ data
-container created by Ruizhu Huang and others
-[@R_TreeSummarizedExperiment], and on the MultiAssayExperiment by
-Marcel Ramos et al. [@Ramos2017]. The idea of using these containers
-as a basis for microbiome data science was initially advanced by the
-groundwork of Domenick Braccia, Héctor Corrada Bravo and others, and
-subsequently brought together with other microbiome data science
-developers [@Shetty2019].
-
-Ample demonstration data resources have been made available as the
-[curatedMetagenomicData](https://waldronlab.io/curatedMetagenomicData/)
-project by Edoardo Pasolli, Lucas Schiffer, Levi Waldron and others
-[@Pasolli2017] adding important support.
-A number of other contributors have advanced the ecosystem
-further, and will be acknowledged in the individual
+The presented framework for microbiome data science is based on the
+_TreeSummarizedExperiment_ data container created by Ruizhu Huang and
+others [@R_TreeSummarizedExperiment], [@Ernst2020], and on the
+_MultiAssayExperiment_ by Marcel Ramos et al. [@Ramos2017]. The idea
+of using these containers as a basis for microbiome data science was
+initially advanced by the groundwork of Domenick Braccia, Héctor
+Corrada Bravo and others and brought together with other microbiome
+data science developers [@Shetty2019]. Setting up the base ecosystem
+of packages and tutorials was then subsequently led by Tuomas Borman,
+Felix Ernst, and [Leo Lahti](http://www.iki.fi/Leo.Lahti). We would
+specifically like to thank everyone who contributed to the work
+supporting the _TreeSummarizedExperiment_ ecosystem for microbiome
+research, including but not limited to the R packages mia, miaViz,
+miaTime, miaSim, philr, ANCOMBC, curatedMetagenomicData, scater,
+scuttle, and other packages, some of which are listed in Section
+\@ref(ecosystem). A number of other contributors have advanced the
+ecosystem further, and will be acknowledged in the individual
 packages, [pull
 requests](https://github.com/microbiome/OMA/graphs/contributors),
 [issues](https://github.com/microbiome/OMA/issues), and other work.
 
-The work has drawn inspiration from many sources, most notably from
-the work on _phyloseq_ by Paul McMurdie and Susan Holmes
+Ample demonstration data resources supporting this framework have been
+made available through the
+[curatedMetagenomicData](https://waldronlab.io/curatedMetagenomicData/)
+project by Edoardo Pasolli, Lucas Schiffer, Levi Waldron and others
+[@Pasolli2017].
+
+The work has drawn initial inspiration from many sources, most notably
+from the work on _phyloseq_ by Paul McMurdie and Susan Holmes
 [@McMurdie2013] who pioneered the work on rigorous and reproducible
 microbiome data science ecosystems in R/Bioconductor. The phyloseq
 framework continues to provide a vast array of complementary packages
-and methods for microbiome studies, and we aim to support full
-interoperability.
-
-The open source books by Susan Holmes and Wolfgang Huber, Modern
-Statistics for Modern Biology [@Holmes2019] and by Garret Grolemund
-and Hadley Wickham, the R for Data Science [@Grolemund2017], and
-Richard McElreath's Statistical Rethinking and the associated online
-resources by Solomon Kurz [@McElreath2020] are key references that
-advanced reproducible data science training and dissemination. The
-Orchestrating Single-Cell Analysis with Bioconductor, or _OSCA_ book
-by Robert Amezquita, Aaron Lun, Stephanie Hicks, and Raphael Gottardo
+and methods for microbiome studies. The Orchestrating Single-Cell
+Analysis with Bioconductor, or
+[_OSCA_](https://bioconductor.org/books/release/OSCA/) book by Robert
+Amezquita, Aaron Lun, Stephanie Hicks, and Raphael Gottardo
 [@Amezquita2020natmeth] has implemented closely related work on the
 _SummarizedExperiment_ data container and its derivatives in the field
-of single cell sequencing studies. Many approaches used in this book
-have been derived from the [OSCA
-framework](https://bioconductor.org/books/release/OSCA/), with various
-adjustments and extensions dedicated to microbiome data science.
+of single cell sequencing studies that have inspired this work.
+
+In the background, the open source books by Susan Holmes and Wolfgang
+Huber, Modern Statistics for Modern Biology [@Holmes2019] and by
+Garret Grolemund and Hadley Wickham, the R for Data Science
+[@Grolemund2017], and Richard McElreath's Statistical Rethinking and
+the associated online resources by Solomon Kurz [@McElreath2020] are
+key references that have advanced reproducible data science training
+and dissemination.
+
+
+
+### Support {-}
+
+This work has been supported by:
+
+* [Research Council of Finland](https://www.aka.fi/)
+
+* [FindingPheno](https://www.findingpheno.eu/) European Union’s Horizon 2020 research and innovation programme under grant agreement No 952914
+
+* COST Action network on Statistical and Machine Learning Techniques for Human Microbiome Studies
+  ([ML4microbiome](https://www.ml4microbiome.eu/)) [@MorenoIndias2021].
+
+* Computational Life Science Research Program, [Biocity Turku](https://biocityturku.fi/)
+
+* [Turku University Foundation](https://www.yliopistosaatio.fi/en/)
 
