Clustering section restructure

--- a/add-comm-typing.Rmd
+++ b/add-comm-typing.Rmd
@@ -217,6 +217,14 @@ scater::plotReducedDim(tse2, "NMDS_BC", colour_by = "CST", point_alpha = 1) + th
 Looking at heatmaps of the CSTs can reveal structure on a different level. Using all of the data again (for the top 8 taxa) and taking the z transformation of the clr transformed counts, we have
 
 ```{r message = FALSE, warning = FALSE, results = FALSE}
+
+library(cluster)
+
+# assume 3 clusters
+K <- 3
+x <- ord[, 1:NDIM]
+
+clust <- as.factor(pam(x, k = K, cluster.only = T))
 # Z transform of CLR counts
 tse2 <- transformCounts(tse2, MARGIN = "samples", assay.type = "counts",
                         method = "clr", pseudocount=1)
