--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -425,6 +425,7 @@ _cobiclust_ takes counts table as an input and gives _cobiclust_ object as an ou
 It includes clusters for taxa and samples. 
 
 ```{r cobiclust_2}
+library(cobiclust)
 # Do clustering; use counts table´
 clusters <- cobiclust(assay(mae[[1]], "counts"))
 
